# CAFS_final

./: .gitignore  :wqwq  README.md  verification.py  verificationagent.py
backend/: QR.py  README.md  debug_verification.py  onlinelist.csv  pyproject.toml  requirements.txt  test.py  test_1.py  test_improvements.py  test_llm_integration.py  test_ocr.py  test_paddle.py  test_trufor.py
backend/app/: config.py  main.py  schemas.py
backend/app/agents/: ext.py  ext_paddle.py  extraction.py  forensics.py  trufor_detector.py  verification.py  verificationagent.py
backend/app/agents/verification/: scanner.py  service.py  sources.py
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/app/: page.tsx
frontend/src/app/validation-certificate/: page.tsx
frontend/src/app/verify-result/: page.tsx
frontend/src/components/: logo.html
frontend/src/components/profile/: UserProfile.tsx  profile.module.css
frontend/src/components/ui/: HeroGrid.tsx  Navbar.tsx
frontend/src/components/verification/: ManualVerificationForm.tsx  UploadForm.tsx  VerifiedCertificate.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
