[project]
name = "multiagent-forgery"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.123.5",
    "mistral>=21.0.0",
    "mistralai>=1.9.11",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "opencv-python>=4.11.0.86",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pydantic>=2.12.5",
    "pytesseract>=0.3.13",
    "python-multipart>=0.0.20",
    "qrcode>=8.2",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
